--- a/src/app/modules/docente-capacitador/edit-list-curso/pages/edit-list-curso/edit-list-curso.component.html
+++ b/src/app/modules/docente-capacitador/edit-list-curso/pages/edit-list-curso/edit-list-curso.component.html
@@ -47,7 +47,7 @@
 <div class="container" style="background-color: #ffffff;">
   <div class="container2" *ngIf="showContainer2">
     <!-- Breadcrumb -->
-    <nav aria-label="breadcrumb" class="main-breadcrumb" style="color: blue;">
+    <nav aria-label="breadcrumb" class="main-breadcrumb my-nav">
       <ol class="breadcrumb">
         <li class="breadcrumb-item"><a (click)="showContainer1 = true; showContainer2 = false;">Lista</a></li>
         <li class="breadcrumb-item"><a>Editar</a></li>
