--- a/src/app/modules/docente-capacitador/edit-list-curso/pages/edit-list-curso/edit-list-curso.component.css
+++ b/src/app/modules/docente-capacitador/edit-list-curso/pages/edit-list-curso/edit-list-curso.component.css
@@ -10,3 +10,37 @@
     object-fit: contain;
   }
   
+  .my-nav {
+    padding: 15px; /* Espacio interno para separación */
+  }
+    /* Estilos para los enlaces dentro del nav */
+    a {
+      color: #ffffff; /* Color del texto blanco */
+      text-decoration: none; /* Sin subrayado */
+      transition: color 0.3s; /* Transición suave al cambiar el color */
+      position: relative; /* Posición relativa para los efectos */
+    }
+  
+    /* Estilos para los enlaces hover (al pasar el mouse) */
+    a:hover {
+      color: #5838f4; /* Color del texto rosa brillante */
+      text-shadow: 1px 1px 3px #f7bf06; /* Sombra de texto rosa */
+    }
+  
+    /* Estilos para el efecto de subrayado */
+    a::after {
+      content: '';
+      position: absolute;
+      left: 0;
+      bottom: -3px;
+      width: 100%;
+      height: 2px;
+      background-color: #4a66e4; /* Color del subrayado rosa */
+      transform: scaleX(0); /* Inicialmente oculto */
+      transition: transform 0.3s; /* Transición suave al mostrar */
+    }
+  
+    /* Estilos para el efecto de subrayado hover */
+    a:hover::after {
+      transform: scaleX(1); /* Mostrar el subrayado al pasar el mouse */
+    }
