--- a/src/app/modules/docente-capacitador/register-diseno-curricular/pages/regiser-diseno-curricular/regiser-diseno-curricular.component.html
+++ b/src/app/modules/docente-capacitador/register-diseno-curricular/pages/regiser-diseno-curricular/regiser-diseno-curricular.component.html
@@ -53,6 +53,7 @@
         <th scope="col">Nivel</th>
         <th scope="col">Temas Transversales</th>
         <th scope="col">Acciones</th>
+        <th scope="col">Reportes</th>
       </tr>
     </thead>
     <tbody>
@@ -66,6 +67,9 @@
           <td>
             <button class="btn btn-primary" (click)="editarDiseno(diseno)">Editar</button>
             <button class="btn btn-danger" (click)="eliminarDiseno(diseno.dcuId)">Eliminar</button>
+          </td>
+          <td>
+            <button class="btn btn-primary">Imprimir</button>
           </td>
         </tr>
       </ng-container>
