--- a/src/app/shared/components/side-bar-admin/side-bar-admin.component.html
+++ b/src/app/shared/components/side-bar-admin/side-bar-admin.component.html
@@ -309,6 +309,31 @@
          
         </ul>
       </li><!-- End Forms Nav -->
+
+        <li class="nav-item">
+          <a
+            class="nav-link collapsed"
+            data-bs-target="#reglamento-nav"
+            data-bs-toggle="collapse"
+            href="#"
+          >
+            <i class="bi bi-gem"></i><span>Reglamento Capacitaciones</span
+            ><i class="bi bi-chevron-down ms-auto"></i>
+          </a>
+          <ul
+            id="reglamento-nav"
+            class="nav-content collapse"
+            data-bs-parent="#sidebar-nav"
+          >
+            <li>
+              <a (click)="goToverReglamento($event)">
+                <i class="bi bi-circle"></i><span>Ver Reglamento</span>
+              </a>
+            </li>
+          </ul>
+        </li>
+        <!-- End Charts Nav -->
+ 
       <li class="nav-item">
         <a class="nav-link collapsed" data-bs-target="#chacrts-nav" data-bs-toggle="collapse" href="#" (click)="goToRegInsti($event)">
           <i class="bi bi-award"></i><span>Institución</span>
