--- a/src/app/shared/components/side-bar/side-bar.component.html
+++ b/src/app/shared/components/side-bar/side-bar.component.html
@@ -713,6 +713,54 @@
         <li class="nav-item">
           <a
             class="nav-link collapsed"
+            data-bs-target="#reglamento-nav"
+            data-bs-toggle="collapse"
+            href="#"
+          >
+            <i class="bi bi-gem"></i><span>Reglamento Capacitaciones</span
+            ><i class="bi bi-chevron-down ms-auto"></i>
+          </a>
+          <ul
+            id="reglamento-nav"
+            class="nav-content collapse"
+            data-bs-parent="#sidebar-nav"
+          >
+            <li>
+              <a (click)="goToverReglamento($event)">
+                <i class="bi bi-circle"></i><span>Ver Reglamento</span>
+              </a>
+            </li>
+          </ul>
+        </li>
+        <!-- End Charts Nav -->
+
+        <li class="nav-item">
+          <a
+            class="nav-link collapsed"
+            data-bs-target="#certifi-nav"
+            data-bs-toggle="collapse"
+            href="#"
+          >
+            <i class="bi bi-gem"></i><span>Certificados</span
+            ><i class="bi bi-chevron-down ms-auto"></i>
+          </a>
+          <ul
+            id="certifi-nav"
+            class="nav-content collapse"
+            data-bs-parent="#sidebar-nav"
+          >
+            <li>
+              <a (click)="goToverCertificado($event)">
+                <i class="bi bi-circle"></i><span>Registro Certificados</span>
+              </a>
+            </li>
+          </ul>
+        </li>
+        <!-- End Charts Nav -->
+
+        <li class="nav-item">
+          <a
+            class="nav-link collapsed"
             data-bs-target="#chacrts-nav"
             data-bs-toggle="collapse"
             href="#"
