--- a/src/app/modules/home/register-usr/pages/register-usr/register-usr.component.css
+++ b/src/app/modules/home/register-usr/pages/register-usr/register-usr.component.css
@@ -523,3 +523,119 @@ ul{
   }
 
 
+
+
+
+  /* Import Google font - Poppins */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  background: #11131e;
+}
+.wrapper {
+  width: 450px;
+  overflow: hidden;
+  padding: 28px;
+  border-radius: 8px;
+  background: #fff;
+  box-shadow: 0 10px 25px rgba(0,0,0,0.06);
+}
+.wrapper .pass-field {
+  height: 65px;
+  width: 100%;
+  position: relative;
+}
+.pass-field input {
+ 
+  outline: none;
+  padding: 0 17px;
+  font-size: 1.3rem;
+  border: 1px solid #999;
+}
+.pass-field input:focus {
+  padding: 0 16px;
+  border: 2px solid #4285F4;
+}
+.pass-field i {
+  right: 18px;
+  top: 50%;
+
+  color: #999;
+  cursor: pointer;
+  position: absolute;
+  transform: translateY(-50%);
+}
+
+
+
+
+.requirement-list li.valid i {
+  font-size: 1.2rem;
+  color: #4285F4;
+}
+.requirement-list li span {
+  margin-left: 12px;
+  color: #333;
+}
+.requirement-list li.valid span {
+  color: #ffffff;
+}
+
+@media screen and (max-width: 500px) {
+  body, .wrapper {
+    padding: 15px;
+  }
+  .wrapper .pass-field {
+    height: 55px;
+  }
+  .pass-field input, .content p  {
+    font-size: 1.15rem;
+  }
+  .pass-field i, .requirement-list li {
+    font-size: 1.1rem;
+  }
+  .requirement-list li span {
+    margin-left: 7px;
+  }
+}
+
+.cont{
+
+  left: 50%;
+  border-radius: 25px;
+  background: rgba( 255, 255, 255, 0.4 );
+box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+backdrop-filter: blur( 14px );
+-webkit-backdrop-filter: blur( 14px );
+  border-radius: 15px;
+  height: 0%;
+  width: 60%;
+  margin-top: 20px;
+  padding-left: 10px ;
+  border: 1px solid rgba( 255, 255, 255, 0.18 );
+      padding: 30px 35px;
+      /* Establece una anchura máxima para el formulario */
+      /* Hace que el formulario sea ajustable */
+      
+
+}
+.requirement-list li span {
+  text-align: left;
+}
+.text-justify {
+  text-align: justify;
+}
+
+
+
+
+
