--- a/src/app/modules/docente-capacitador/register-notas/pages/register-notas/register-notas.component.html
+++ b/src/app/modules/docente-capacitador/register-notas/pages/register-notas/register-notas.component.html
@@ -3,7 +3,8 @@
 <div class="container1" *ngIf="showContainer1">
     <div class="row">
         <div class="col-md-4 col-xl-3" *ngFor="let curso of cursosList">
-            <div class="card bg-c-blue order-card" (click)="showContainer2 = true; showContainer1 = false; showContainer3 = false; mostrarDatoshc(curso.curId)">
+            <div class="card bg-c-blue order-card"
+                (click)="showContainer2 = true; showContainer1 = false; showContainer3 = false; mostrarDatoshc(curso.curId)">
                 <div class="card-block">
                     <h6 class="m-b-20">Código: {{curso.curCodigo}}</h6>
                     <h2 class="text-right"><i class="fa fa-graduation-cap f-left"></i><span>{{curso.curNombre}}</span>
@@ -22,20 +23,23 @@
     </div>
 </div>
 <div class="showContainer2" *ngIf="showContainer2">
-     <!-- Breadcrumb -->
-     <nav aria-label="breadcrumb" class="main-breadcrumb">
+    <!-- Breadcrumb -->
+    <nav aria-label="breadcrumb" class="main-breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a (click)="showContainer1 = true; showContainer2 = false;showContainer3 = false">Cursos</a></li>
+            <li class="breadcrumb-item"><a
+                    (click)="showContainer1 = true; showContainer2 = false;showContainer3 = false">Cursos</a></li>
             <li class="breadcrumb-item"><a>Horarios</a></li>
         </ol>
     </nav>
     <!-- /Breadcrumb -->
     <div class="row">
         <div class="col-md-4 col-xl-3" *ngFor="let horario of horarioscursoList">
-            <div class="card bg-c-blue order-card" (click)="showContainer3 = true; showContainer2 = false; mostrarParticipante(horario.hcurso.curId,horario.hcuId)">
+            <div class="card bg-c-blue order-card"
+                (click)="showContainer3 = true; showContainer2 = false; mostrarParticipante(horario.hcurso.curId,horario.hcuId)">
                 <div class="card-block">
                     <h6 class="m-b-20">Horario: {{horario.hcuNombre}}</h6>
-                    <h2 class="text-right"><i class="fa fa-graduation-cap f-left"></i><span>{{horario.hcurso.curNombre}}</span>
+                    <h2 class="text-right"><i
+                            class="fa fa-graduation-cap f-left"></i><span>{{horario.hcurso.curNombre}}</span>
                     </h2>
                     <div style="margin-bottom: 10px;">
                         <h3 class="valn"><span class="f-right valn">{{horario.horario.horInicio}}</span>Hora Inicio</h3>
@@ -52,142 +56,165 @@
 
 
 <div class="container3" *ngIf="showContainer3">
-        <!-- Breadcrumb -->
-        <nav aria-label="breadcrumb" class="main-breadcrumb">
-            <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a (click)="showContainer1 = true; showContainer2 = false; showContainer3 = false">Cursos</a></li>
-                <li class="breadcrumb-item"><a (click)="showContainer2 = true; showContainer1 = false; showContainer3 = false">Horarios</a></li>
-                <li class="breadcrumb-item"><a>Registrar Notas</a></li>
-            </ol>
-        </nav>
-        <!-- /Breadcrumb -->
-        <div class="main-body">
-            <div class="row">
-                <div class="col-lg-4">
+    <!-- Breadcrumb -->
+    <nav aria-label="breadcrumb" class="main-breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a
+                    (click)="showContainer1 = true; showContainer2 = false; showContainer3 = false">Cursos</a></li>
+            <li class="breadcrumb-item"><a
+                    (click)="showContainer2 = true; showContainer1 = false; showContainer3 = false">Horarios</a></li>
+            <li class="breadcrumb-item"><a>Registrar Notas</a></li>
+        </ol>
+    </nav>
+    <!-- /Breadcrumb -->
+    <div class="main-body">
+        <div class="row">
+            <div class="col-lg-4">
 
-                    <div class="card">
-                        <div class="card-body">
-                            <div class="d-flex flex-column align-items-center text-center">
-                                <img src="https://e7.pngegg.com/pngimages/575/29/png-clipart-computer-icons-instructor-led-training-course-education-toolbox-miscellaneous-blue.png"
-                                    alt="Admin" class="rounded-circle" width="150">
-                                <div class="mt-3">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="d-flex flex-column align-items-center text-center">
+                            <img src="https://e7.pngegg.com/pngimages/575/29/png-clipart-computer-icons-instructor-led-training-course-education-toolbox-miscellaneous-blue.png"
+                                alt="Admin" class="rounded-circle" width="150">
+                            <div class="mt-3">
 
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
-                                        class="bi bi-award-fill" viewBox="0 0 16 16">
-                                        <path
-                                            d="m8 0 1.669.864 1.858.282.842 1.68 1.337 1.32L13.4 6l.306 1.854-1.337 1.32-.842 1.68-1.858.282L8 12l-1.669-.864-1.858-.282-.842-1.68-1.337-1.32L2.6 6l-.306-1.854 1.337-1.32.842-1.68L6.331.864 8 0z" />
-                                        <path
-                                            d="M4 11.794V16l4-1 4 1v-4.206l-2.018.306L8 13.126 6.018 12.1 4 11.794z" />
-                                    </svg>
-                                    <h4>Notas del Estudiante</h4>
-                                    <p class="text-secondary mb-1">{{participante.parPersona?.nombre}} {{participante.parPersona?.apellido}}</p>
-                                </div>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
+                                    class="bi bi-award-fill" viewBox="0 0 16 16">
+                                    <path
+                                        d="m8 0 1.669.864 1.858.282.842 1.68 1.337 1.32L13.4 6l.306 1.854-1.337 1.32-.842 1.68-1.858.282L8 12l-1.669-.864-1.858-.282-.842-1.68-1.337-1.32L2.6 6l-.306-1.854 1.337-1.32.842-1.68L6.331.864 8 0z" />
+                                    <path d="M4 11.794V16l4-1 4 1v-4.206l-2.018.306L8 13.126 6.018 12.1 4 11.794z" />
+                                </svg>
+                                <h4>{{participante.parPersona?.nombre}}
+                                    {{participante.parPersona?.apellido}}</h4>
+                                <p class="text-secondary mb-1">Estudiante</p>
                             </div>
                         </div>
                     </div>
-
                 </div>
-                <div class="col-lg-8">
-                    <div class="card">
-                        <div class="card-body">
-                            <h4 style="text-align: center;">Registro de Notas</h4>
-                            <br>
-                            <form>
-                                <div class="row mb-3">
-                                    <div class="col-sm-3">
-                                        <h6 class="mb-0">Estado del Estudiante</h6>
-                                    </div>
-                                    <div class="col-sm-9 text-secondary">
-                                        <input type="text" class="form-control" id="inputCedula"
-                                            placeholder="" name="cedula"
-                                            [(ngModel)]="participante.parEstadoaprovacion">
-                                    </div>
-                                </div>
 
-                                <div class="row mb-3">
-                                    <div class="col-sm-3">
-                                        <h6 class="mb-0">Nota Parcial</h6>
-                                    </div>
-                                    <div class="col-sm-9 text-secondary">
-                                        <input type="number" class="form-control" id="inputNparcial"
-                                            placeholder="Ingrese la nota del 1er parcial" name="notaParcial"
-                                            [(ngModel)]="participante.parNotaparcial">
-                                    </div>
+            </div>
+            <div class="col-lg-8">
+                <div class="card">
+                    <div class="card-body">
+                        <h4 style="text-align: center;">Registro de Notas</h4>
+                        <br>
+                        <form>
+                            <div class="row mb-3">
+                                <div class="col-sm-3">
+                                    <h6 class="mb-0">Estado del Estudiante</h6>
                                 </div>
-                                <div class="row mb-3">
-                                    <div class="col-sm-3">
-                                        <h6 class="mb-0">Nota Final</h6>
-                                    </div>
-                                    <div class="col-sm-9 text-secondary">
-                                        <input type="number" class="form-control" id="inputNfinal"
-                                            placeholder="Ingrese la nota final" name="notafinal"
-                                            [(ngModel)]="participante.parNotafinal">
-                                    </div>
+                                <div class="col-sm-9 text-secondary">
+                                    <select class="form-control" id="selectEstado" name="estado"
+                                        [(ngModel)]="participante.parEstadoaprovacion" >
+                                        <option value="Aprobado">Aprobado
+                                        </option>
+                                        <option value="Reprobado">Reprobado
+                                        </option>
+                                        <option value="Retirado">Retirado
+                                        </option>
+                                        <option value="Cursando">Cursando
+                                        </option>
+                                    </select>
                                 </div>
-                                <div class="row mb-3">
-                                    <div class="col-sm-3">
-                                        <h6 class="mb-0">Promedio</h6>
-                                    </div>
-                                    <div class="col-sm-9 text-secondary">
-                                        <input type="number" class="form-control" id="inputPromedio"
-                                            placeholder="Ingrese el promedio" name="promedio"
-                                            [(ngModel)]="participante.parPromedio">
-                                    </div>
+                            </div>
+
+                            <div class="row mb-3">
+                                <div class="col-sm-3">
+                                    <h6 class="mb-0">Nota Parcial</h6>
                                 </div>
-                                <div class="row mb-3">
-                                    <div class="col-sm-3">
-                                        <h6 class="mb-0">Observaciones</h6>
-                                    </div>
-                                    <div class="col-sm-9 text-secondary">
-                                        <input type="text" class="form-control" id="inputObservaciones"
-                                            placeholder="Ingrese las observaciones del Estudiante" name="Obcervaciones"
-                                            [(ngModel)]="participante.parObservacion">
-                                    </div>
+                                <div class="col-sm-9 text-secondary">
+                                    <input type="text" class="form-control" id="inputNparcial"
+                                        placeholder="Ingrese la nota del 1er parcial" name="notaParcial"
+                                        [(ngModel)]="participante.parNotaparcial" (input)="filtrarNumeros($event, 1)"
+                                        inputmode="numeric">
+                                    <small class="text-danger" *ngIf="!notaPrimer">La nota debe estar entre 0 y
+                                        100</small>
                                 </div>
-                                <div class="row">
-                                    <div class="col-sm-3"></div>
-                                    <div class="col-sm-9 text-secondary">
-                                        <Span></Span> <button type="button" class="btn btn-primary" (click)="savenotas(participante)">Guardar Cambios</button>
-                                    </div>
+                            </div>
+                            <div class="row mb-3">
+                                <div class="col-sm-3">
+                                    <h6 class="mb-0">Nota Final</h6>
                                 </div>
-                            </form>
-                        </div>
+                                <div class="col-sm-9 text-secondary">
+                                    <input type="text" class="form-control" id="inputNfinal"
+                                        placeholder="Ingrese la nota final" name="notafinal"
+                                        [(ngModel)]="participante.parNotafinal" (input)="filtrarNumeros($event,2)"
+                                        inputmode="numeric">
+                                    <small class="text-danger" *ngIf="!notafinal">La nota debe estar entre 0 y
+                                        100</small>
+
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <div class="col-sm-3">
+                                    <h6 class="mb-0">Promedio</h6>
+                                </div>
+                                <div class="col-sm-9 text-secondary">
+                                    <input type="text" class="form-control" id="inputPromedio"
+                                        placeholder="Ingrese el promedio" name="promedio"
+                                        [(ngModel)]="participante.parPromedio" (input)="filtrarNumeros($event,3)"
+                                        inputmode="numeric">
+                                    <small class="text-danger" *ngIf="!promedio">La nota debe estar entre 0 y
+                                        100</small>
+
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <div class="col-sm-3">
+                                    <h6 class="mb-0">Observaciones</h6>
+                                </div>
+                                <div class="col-sm-9 text-secondary">
+                                    <input type="text" class="form-control" id="inputObservaciones"
+                                        placeholder="Ingrese las observaciones del Estudiante" name="Obcervaciones"
+                                        [(ngModel)]="participante.parObservacion">
+                                    <small class="text-danger" *ngIf="!observacion">El campo debe ser llenado</small>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-sm-3"></div>
+                                <div class="col-sm-9 text-secondary">
+                                    <Span></Span> <button type="button" class="btn btn-primary"
+                                        (click)="savenotas(participante)">Guardar Cambios</button>
+                                </div>
+                            </div>
+                        </form>
                     </div>
-
                 </div>
+
             </div>
         </div>
-
-        <br><br>
-        <!-- Tablaaaaaa -->
-        <table class="table">
-            <thead class="thead-dark">
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Estudiante</th>
-                    <th scope="col">Nota 1er Parcial</th>
-                    <th scope="col">Nota Final</th>
-                    <th scope="col">Promedio</th>
-                    <th scope="col">Observaciones</th>
-                    <th scope="col">Estado</th>
-                    <th scope="col">editar</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let participante of participantesList; let i = index">
-                    <th>{{ i + 1 }}</th>
-                    <td>{{ participante.parPersona.nombre +' '+ participante.parPersona.apellido }}</td>
-                    <td>{{ participante.parNotaparcial}}</td>
-                    <td>{{ participante.parNotafinal }}</td>
-                    <td>{{ participante.parPromedio }}</td>
-                    <td>{{ participante.parObservacion }}</td>
-                    <td>{{ participante.parEstadoaprovacion }}</td>
-                    <td>
-                        <button type="button" class="btn btn-primary"
-                            (click)="editarNotas(participante)">
-                            Editar</button>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
     </div>
+
+    <br><br>
+    <!-- Tablaaaaaa -->
+    <table class="table">
+        <thead class="thead-dark">
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">Estudiante</th>
+                <th scope="col">Nota 1er Parcial</th>
+                <th scope="col">Nota Final</th>
+                <th scope="col">Promedio</th>
+                <th scope="col">Observaciones</th>
+                <th scope="col">Estado</th>
+                <th scope="col">editar</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let participante of participantesList; let i = index">
+                <th>{{ i + 1 }}</th>
+                <td>{{ participante.parPersona.nombre +' '+ participante.parPersona.apellido }}</td>
+                <td>{{ participante.parNotaparcial}}</td>
+                <td>{{ participante.parNotafinal }}</td>
+                <td>{{ participante.parPromedio }}</td>
+                <td>{{ participante.parObservacion }}</td>
+                <td>{{ participante.parEstadoaprovacion }}</td>
+                <td>
+                    <button type="button" class="btn btn-primary" (click)="editarNotas(participante)">
+                        Editar</button>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
