--- a/src/app/modules/docente-capacitador/reportes/pages/reportes/reportes.component.html
+++ b/src/app/modules/docente-capacitador/reportes/pages/reportes/reportes.component.html
@@ -1,18 +1,10 @@
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 <br>
 <div class="container1" *ngIf="showContainer1">
-    <!-- Breadcrumb -->
-    <!-- <nav aria-label="breadcrumb" class="main-breadcrumb">
-        <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a (click)="showContainer1 = true; showContainer2 = false;">Programas</a></li>
-            <li class="breadcrumb-item"><a>Cursos</a></li>
-        </ol>
-    </nav> -->
-    <!-- /Breadcrumb -->
-
     <div class="row">
         <div class="col-md-4 col-xl-3" *ngFor="let curso of cursosList">
-            <div class="card bg-c-blue order-card" (click)="showContainer2 = true; showContainer1 = false;  ">
+            <div class="card bg-c-blue order-card" (click)="capturarcurso(curso)"
+                (click)="showContainer2 = true; showContainer1 = false;">
                 <div class="card-block">
                     <h6 class="m-b-20">Codigo: {{curso.curCodigo}}</h6>
                     <h2 class="text-right"><i class="fa fa-graduation-cap f-left"></i><span>{{curso.curNombre}}</span>
@@ -44,7 +36,7 @@
 
         <!-- //desde aqui -->
         <div class="col-md-4 col-xl-3">
-            <div class="card bg-c-blue order-card" (click)="tipoReporte(1)"
+            <div class="card bg-c-blue order-card" (click)="obtenerinformefianal()"
                 (click)="showContainer2 = false; showContainer3 = true;">
                 <div class="card-block">
                     <h6 class="m-b-20">Tipo de Reporte</h6>
@@ -59,10 +51,10 @@
             </div>
         </div>
         <!-- hasata aqui -->
-    <!--hasta aca duplicar -->
-      <div class="col-md-4 col-xl-3">
+        <!--hasta aca duplicar -->
+        <div class="col-md-4 col-xl-3">
 
-            <div class="card bg-c-blue order-card" (click)="tipoReporte(1)"
+            <div class="card bg-c-blue order-card" (click)="obtenerasistenciacurso()"
                 (click)="showContainer2 = false; showContainer4 = true;">
                 <div class="card-block">
                     <h6 class="m-b-20">Tipo de Reporte</h6>
@@ -77,12 +69,11 @@
             </div>
         </div>
         <div class="col-md-4 col-xl-3">
-            <div class="card bg-c-blue order-card" (click)="tipoReporte(1)"
-                (click)="showContainer2 = false; showContainer4 = true;">
+            <div class="card bg-c-blue order-card" (click)="showContainer2 = false; showContainer4 = true;">
                 <div class="card-block">
                     <h6 class="m-b-20">Tipo de Reporte</h6>
-                    <h2 class="text-right"><i class="fa fa-graduation-cap f-left"></i><span
-                            style="font-size: 25px;">Ver Silabo del Curso</span>
+                    <h2 class="text-right"><i class="fa fa-graduation-cap f-left"></i><span style="font-size: 25px;">Ver
+                            Silabo del Curso</span>
                     </h2>
                     <div style="margin-bottom: 10px;">
                     </div>
@@ -92,21 +83,6 @@
             </div>
         </div>
     </div>
-    <!-- <div class="col-md-4 col-xl-3">
-      <div class="card bg-c-blue order-card" (click)="tipoReporte(1)"
-          (click)="showContainer2 = false; showContainer3 = true;">
-          <div class="card-block">
-              <h6 class="m-b-20">Tipo de Reporte</h6>
-              <h2 class="text-right"><i class="fa fa-graduation-cap f-left"></i><span
-                      style="font-size: 25px;">Silabo</span>
-              </h2>
-              <div style="margin-bottom: 10px;">
-              </div>
-              <div style="margin-bottom: 10px;">
-              </div>
-          </div>
-      </div>
-  </div> -->
 </div>
 
 
@@ -142,7 +118,10 @@
                                             d="M4 11.794V16l4-1 4 1v-4.206l-2.018.306L8 13.126 6.018 12.1 4 11.794z" />
                                     </svg>
                                     <h4>Informe Final del Curso</h4>
-                                    <p class="text-secondary mb-1"></p>
+                                    <div *ngIf="informeFinal.ifiId!=0">
+                                        <p class="text-secondary mb-1">Imprimir informe</p>
+                                        <button type="button" class="btn btn-primary" (click)="imprimirReporteFinal(informeFinal)">Imprimir</button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -157,11 +136,12 @@
                             <form>
                                 <div class="row mb-3">
                                     <div class="col-sm-3">
-                                        <h6 class="mb-0">Id del curso</h6>
+                                        <h6 class="mb-0">Curso</h6>
                                     </div>
                                     <div class="col-sm-9 text-secondary">
                                         <input type="text" class="form-control" id="inputCedula"
-                                            placeholder="Ingrese el nombre del programa" name="cedula">
+                                            placeholder="Ingrese el nombre del programa" name="cedula"
+                                            [value]="informeFinal.ifiCurso?.curNombre" readonly>
                                     </div>
                                 </div>
 
@@ -170,9 +150,9 @@
                                         <h6 class="mb-0">Fechas de Elaboracion</h6>
                                     </div>
                                     <div class="col-sm-9 text-secondary">
-                                        <input type="date" class="form-control" id="inputApellido"
+                                        <input type="text" class="form-control" id="inputfecha"
                                             placeholder="Ingrese la fecha de inicio" name="fecha_inicio"
-                                            [(ngModel)]="informeFinal.ifiFecha">
+                                            [value]="informeFinal.ifiFecha | date: 'yyyy-MM-dd'" readonly>
                                     </div>
                                 </div>
 
@@ -184,16 +164,15 @@
                                         <input type="text" class="form-control" id="inputCedula"
                                             placeholder="Ingrese las observaciones del curso" name="cedula"
                                             [(ngModel)]="informeFinal.ifiObservaciones">
+                                        <small *ngIf="observacion!=true">Ingrese la observación del informe</small>
                                     </div>
                                 </div>
 
                                 <div class="row">
                                     <div class="col-sm-3"></div>
                                     <div class="col-sm-9 text-secondary">
-                                        <Span></Span> <button (click)="saveInformefinal()">Guardar Informe</button>
-                                        <Span></Span> <button (click)="AllInformesFinal()">Obtener Informes</button>
-
-                                        <!-- <Span></Span> <button (click)="mostrarDatos()">Ver datos</button   > -->
+                                        <Span></Span> <button type="button" class="btn btn-primary"
+                                            (click)="saveInformefinal()">Guardar</button>
                                     </div>
                                 </div>
                             </form>
@@ -203,35 +182,6 @@
                 </div>
             </div>
         </div>
-
-        <br><br>
-        <!-- Tablaaaaaa -->
-        <table class="table">
-            <thead class="thead-dark">
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Observaciones</th>
-                    <th scope="col">Fecha Emision</th>
-                    <th scope="col">Estado</th>
-                    <th scope="col">editar</th>
-                    <th scope="col">Imprimir</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let informefinal of informefinalList">
-                    <th>{{ informefinal.ifiId }}</th>
-                    <td>{{ informefinal.ifiObservaciones }}</td>
-                    <td>{{ informefinal.ifiFecha | date: 'dd/MM/yyyy' }}</td>
-                    <td>{{ informefinal.ifiEstado }}</td>
-                    <td><button type="button" class="btn btn-primary"
-                            (click)="editarInformefinal(informefinal)">Editar</button>
-                    </td>
-                    <td><button type="button" class="btn btn-primary"
-                            (click)="imprimirReporteFinal(informefinal, curso.curId)">Imprimir</button>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
     </div>
 </div>
 
@@ -248,113 +198,89 @@
             </ol>
         </nav>
         <!-- /Breadcrumb -->
-    <div class="main-body">
-        <div class="row">
-            <div class="col-lg-4">
+        <div class="main-body">
+            <div class="row">
+                <div class="col-lg-4">
 
-                <div class="card">
-                    <div class="card-body">
-                        <div class="d-flex flex-column align-items-center text-center">
-                            <img src="https://e7.pngegg.com/pngimages/575/29/png-clipart-computer-icons-instructor-led-training-course-education-toolbox-miscellaneous-blue.png"
-                                alt="Admin" class="rounded-circle" width="150">
-                            <div class="mt-3">
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="d-flex flex-column align-items-center text-center">
+                                <img src="https://e7.pngegg.com/pngimages/575/29/png-clipart-computer-icons-instructor-led-training-course-education-toolbox-miscellaneous-blue.png"
+                                    alt="Admin" class="rounded-circle" width="150">
+                                <div class="mt-3">
 
-                                <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
-                                    class="bi bi-award-fill" viewBox="0 0 16 16">
-                                    <path
-                                        d="m8 0 1.669.864 1.858.282.842 1.68 1.337 1.32L13.4 6l.306 1.854-1.337 1.32-.842 1.68-1.858.282L8 12l-1.669-.864-1.858-.282-.842-1.68-1.337-1.32L2.6 6l-.306-1.854 1.337-1.32.842-1.68L6.331.864 8 0z" />
-                                    <path d="M4 11.794V16l4-1 4 1v-4.206l-2.018.306L8 13.126 6.018 12.1 4 11.794z" />
-                                </svg>
-                                <h4>Informe de Asistencia del Curso</h4>
-                                <p class="text-secondary mb-1"></p>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
+                                        class="bi bi-award-fill" viewBox="0 0 16 16">
+                                        <path
+                                            d="m8 0 1.669.864 1.858.282.842 1.68 1.337 1.32L13.4 6l.306 1.854-1.337 1.32-.842 1.68-1.858.282L8 12l-1.669-.864-1.858-.282-.842-1.68-1.337-1.32L2.6 6l-.306-1.854 1.337-1.32.842-1.68L6.331.864 8 0z" />
+                                        <path
+                                            d="M4 11.794V16l4-1 4 1v-4.206l-2.018.306L8 13.126 6.018 12.1 4 11.794z" />
+                                    </svg>
+                                    <h4>Informe de Asistencia del Curso</h4>
+                                    <div *ngIf="asistenciaCurso.acuId!=0">
+                                        <p class="text-secondary mb-1">Imprimir informe</p>
+                                        <button type="button" class="btn btn-primary">Imprimir</button>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
+
                 </div>
+                <div class="col-lg-8">
+                    <div class="card">
+                        <div class="card-body">
+                            <h4 style="text-align: center;">Registro</h4>
+                            <br>
+                            <form>
+                                <div class="row mb-3">
+                                    <div class="col-sm-3">
+                                        <h6 class="mb-0">Curso</h6>
+                                    </div>
+                                    <div class="col-sm-9 text-secondary">
+                                        <input type="text" class="form-control" id="inputCedula"
+                                            placeholder="Ingrese el nombre del programa" name="cedula"
+                                            [value]="asistenciaCurso.acuCurso?.curNombre" readonly>
+                                    </div>
+                                </div>
 
-            </div>
-            <div class="col-lg-8">
-                <div class="card">
-                    <div class="card-body">
-                        <h4 style="text-align: center;">Registro</h4>
-                        <br>
-                        <form>
-                            <div class="row mb-3">
-                                <div class="col-sm-3">
-                                    <h6 class="mb-0">Id del curso</h6>
-                                </div>
-                                <div class="col-sm-9 text-secondary">
-                                    <input type="text" class="form-control" id="inputCedula"
-                                        placeholder="Ingrese el nombre del programa" name="cedula">
-                                </div>
-                            </div>
+                                <div class="row mb-3">
+                                    <div class="col-sm-3">
+                                        <h6 class="mb-0">Fechas de Elaboracion</h6>
+                                    </div>
+                                    <div class="col-sm-9 text-secondary">
+                                        <input type="text" class="form-control" id="inputfecha"
+                                            placeholder="Ingrese la fecha de inicio" name="fecha_inicio"
+                                            [value]="asistenciaCurso.acuFechaelaboracion | date: 'yyyy-MM-dd'" readonly>
 
-                            <div class="row mb-3">
-                                <div class="col-sm-3">
-                                    <h6 class="mb-0">Fechas de Elaboracion</h6>
+                                    </div>
                                 </div>
-                                <div class="col-sm-9 text-secondary">
-                                    <input type="date" class="form-control" id="inputApellido"
-                                        placeholder="Ingrese la fecha" name="fecha_inicio"
-                                        [(ngModel)]="asistenciaCurso.acuFechaelaboracion">
-                                </div>
-                            </div>
 
-                            <div class="row mb-3">
-                                <div class="col-sm-3">
-                                    <h6 class="mb-0">Observaciones</h6>
+                                <div class="row mb-3">
+                                    <div class="col-sm-3">
+                                        <h6 class="mb-0">Observaciones</h6>
+                                    </div>
+                                    <div class="col-sm-9 text-secondary">
+                                        <input type="text" class="form-control" id="observaciona"
+                                            placeholder="Ingrese la observación del informe" name="observaciona"
+                                            [(ngModel)]="asistenciaCurso.acuObservacion">
+                                        <small *ngIf="observacion2!=true">Ingrese la observación del informe</small>
+                                    </div>
                                 </div>
-                                <div class="col-sm-9 text-secondary">
-                                    <input type="text" class="form-control" id="inputCedula"
-                                        placeholder="Ingrese las observaciones de la asistencia" name="cedula"
-                                        [(ngModel)]="asistenciaCurso.acuObservacion">
-                                </div>
-                            </div>
 
-                            <div class="row">
-                                <div class="col-sm-3"></div>
-                                <div class="col-sm-9 text-secondary">
-                                    <Span></Span> <button (click)="saveAsistenciaCurso()">Guardar Informe</button>
-                                    <Span></Span> <button (click)="listarAsistenciasCurso()">Obtener
-                                        Informes</button>
-
-                                    <!-- <Span></Span> <button (click)="mostrarDatos()">Ver datos</button   > -->
+                                <div class="row">
+                                    <div class="col-sm-3"></div>
+                                    <div class="col-sm-9 text-secondary">
+                                        <Span></Span> <button type="button" class="btn btn-primary"
+                                            (click)="saveAsistenciaCurso()">Guardar</button>
+                                    </div>
                                 </div>
-                            </div>
-                        </form>
+                            </form>
+                        </div>
                     </div>
-                </div>
 
+                </div>
             </div>
         </div>
     </div>
-
-
-    <br><br>
-    <!-- Tablaaaaaa -->
-    <table class="table">
-        <thead class="thead-dark">
-            <tr>
-                <th scope="col">#</th>
-                <th scope="col">Observaciones</th>
-                <th scope="col">Fecha Emision</th>
-                <th scope="col">Estado</th>
-                <th scope="col">editar</th>
-                <th scope="col">Imprimir</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let asistencia of asistenciasCursolList">
-                <th>{{ asistencia.acuId }}</th>
-                <td>{{ asistencia.acuObservacion }}</td>
-                <td>{{ asistencia.acuFechaelaboracion | date: 'dd/MM/yyyy' }}</td>
-                <td>{{ asistencia.acuEstado }}</td>
-                <td><button type="button" class="btn btn-primary"
-                        (click)="editarAsistenciasCurso(asistencia)">Editar</button></td>
-                        <td><button type="button" class="btn btn-primary"
-                          (click)="imprimirRegistroAsistenciaEvaluacion(asistencia.acuId)">Imprimir</button>
-                  </td>
-            </tr>
-        </tbody>
-    </table>
 </div>
